Switch to absolute positionning instead of fixed

--- a/demo/index.html
+++ b/demo/index.html
@@ -475,6 +475,14 @@
         </tbody>
       </table>
     </div>
+
+    <h2>More content here</h2>
+    <p>Let's put more content here so we can scroll the page too and see what happens.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, dicta, quasi porro illum reiciendis ut ad iure architecto. Voluptates, soluta ea neque porro ratione dolore placeat eos odit quaerat voluptatum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, laborum, ab excepturi obcaecati officia aperiam quisquam provident dolor maiores ratione impedit repellat repellendus eos delectus architecto consequuntur magnam. Illo, possimus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, laborum, ab excepturi obcaecati officia aperiam quisquam provident dolor maiores ratione impedit repellat repellendus eos delectus architecto consequuntur magnam. Illo, possimus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, laborum, ab excepturi obcaecati officia aperiam quisquam provident dolor maiores ratione impedit repellat repellendus eos delectus architecto consequuntur magnam. Illo, possimus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, laborum, ab excepturi obcaecati officia aperiam quisquam provident dolor maiores ratione impedit repellat repellendus eos delectus architecto consequuntur magnam. Illo, possimus.</p>
   </div>
 </body>
 </html>
