Include jQuery in demo folder

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
   <title>gummy.js - Dead simple sticky table headers</title>
   <link rel="stylesheet" href="../src/gummy.css">
   <link rel="stylesheet" href="demo.css">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script src="jquery.min.js"></script>
   <script src="../src/gummy.js"></script>
 </head>
 <body>
