Add gummy header only demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,541 @@
   <div class="wrap">
     <h1>gummy.js - Dead simple sticky table headers</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, cumque, id, quisquam, repudiandae praesentium reprehenderit similique suscipit atque expedita aut error aspernatur rem nesciunt enim odit. Recusandae, dolore similique explicabo!</p>
-    <div class="gummy-wrap">
+
+    <h2>Gummy header</h2>
+
+    <div class="demo-1">
+      <table class="gummy-table">
+        <thead>
+          <tr>
+            <th>Lorem ipsum</th>
+            <th>Dolor sit</th>
+            <th>Amet</th>
+            <th>Consectetur adipisicing</th>
+            <th>Quibusdam nobis</th>
+            <th>Repudiandae</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>First row</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+          <tr>
+            <td>Last row</td>
+            <td>150</td>
+            <td>1400</td>
+            <td>24</td>
+            <td>-322</td>
+            <td>360</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <h2>Gummy header + gummy column</h2>
+
+    <div class="demo-2">
       <table class="gummy-table">
         <thead>
           <tr>
