--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="demo.css">
   <script src="jquery.min.js"></script>
   <script src="../src/gummy.js"></script>
+  <script src="demo.js"></script>
 </head>
 <body>
   <div class="wrap">
